--- a/Jokes/Jokes/Configurations/Development/Development.xcconfig
+++ b/Jokes/Jokes/Configurations/Development/Development.xcconfig
@@ -11,7 +11,10 @@
 APP_BUNDLE_ID = id
 APP_NAME = name
 
+
 TASK_CONFIGURATOR_ENVIRONMENT = environment
 OPERATION_LOGGING_ENABLED = false
+
+JOKES_ENDPOINT = url
 
 #include "LocalDevelopment.xcconfig"
